react integration, draggable ui panel

--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -5,6 +5,7 @@
 #chat {
     position: fixed;
     z-index: 9;
+    visibility: hidden;
     
     font-size: 14px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
