--- a/client/ui/chat/chat.css
+++ b/client/ui/chat/chat.css
@@ -1,8 +1,15 @@
+/*
+    Chat
+*/
+
 .Chat {
     visibility: visible;
-    
-    background-color: black;
-    opacity: 1.0;
+    display: block;
+
+    background-color: rgba(0, 0, 0, 0.2);
+
+    display: flex;
+    flex-direction: column;
 
     position: absolute;
     bottom: 0;
@@ -18,15 +25,25 @@
 
 .DraggableBar {
     visibility: visible;
-    background-color: blue;
+    user-select: none;
+    background: linear-gradient(160deg, rgb(29, 29, 29) 0%, rgb(73, 73, 73) 100%);
+
+    opacity: 1.0;
+    transition-timing-function: ease;
+    transition: filter 0.2s;
 
     width: 100%;
     height: 20px;
 }
 
+.DraggableBar:active {
+    filter: brightness(130%);
+}
+
 .TopLeftResizeButton {
     visibility: visible;
-    background-color: red;
+    background-color: white;
+    opacity: 0.2;
     
     position: absolute;
     cursor: nesw-resize;
@@ -36,4 +53,45 @@
     height: 10px;
     right: 0;
     top: 0;
+}
+
+.TopBar {
+    width: 100%;
+}
+
+.MessagePanel {
+    flex-grow: 1;
+
+    background-color: black;
+    opacity: 0.1;
+
+    width: auto;
+    height: auto;
+
+    margin: 5px;
+    margin-bottom: 0px;
+}
+
+.InputField {
+    visibility: visible;
+    outline: none;
+    overflow: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+
+    background-color: black;
+    opacity: 0.7;
+    color: white;
+
+    padding: 5px;
+    margin: 5px;
+
+    border-radius: 7px;
+    min-height: 1em;
+    max-height: 35px;
+    height: auto;
+}
+
+.InputField::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
 }
