--- a/client/ui/chat/chat.css
+++ b/client/ui/chat/chat.css
@@ -59,25 +59,50 @@
     width: 100%;
 }
 
-.MessagePanel {
+.message-list {
     flex-grow: 1;
+    overflow: auto;
+    overflow-x: hidden;
 
-    background-color: black;
-    opacity: 0.1;
+    background-color: rgba(0, 0, 0, 0.144);
+    color: white;
+    text-shadow: 0 0 3px rgba(0, 0, 0, 1.0);
+
+    overflow-wrap: break-word;
+
+    display: flex;
+    flex-direction: column;
 
     width: auto;
-    height: auto;
+    height: 100%;
 
     margin: 5px;
     margin-bottom: 0px;
 }
 
-.InputField {
+.msg-system {
+}
+
+.msg-system span {
+    white-space: nowrap;
+}
+
+.msg-user {
+    color: rgb(203, 219, 163);
+}
+
+.msg-user .name {
+    word-break: break-all;
+    float: left;
+    margin-right: 6px;
+    color: rgb(144, 207, 85);
+}
+
+.input-field {
     visibility: visible;
     outline: none;
     overflow: auto;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+   
 
     background-color: black;
     opacity: 0.7;
@@ -92,6 +117,11 @@
     height: auto;
 }
 
-.InputField::-webkit-scrollbar {
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.no-scrollbar::-webkit-scrollbar {
     display: none; /* Chrome, Safari and Opera */
 }
